# kazparse

./: .gitignore  CHANGELOG.MD  README.MD  README.md  example.py  pyproject.toml  setup.py  test.py
.avalon/: package  uninstall.sh
CLIParse/: command.py  flag.py  flags.py  loader.py  parse.py  plugins.py
kazparse/: __init__.py  command.py  flag.py  flags.py  loader.py  parse.py  plugins.py
